# webrtc_fastapi_demo

./: README.md  pyproject.toml  requirements.txt
basics/: consumer.py  producer.py
webrtc_fastapi_demo_basics/: consumer.py  producer.py
webrtc_fastapi_demo_simple/: app.py  producer.py
webrtc_fastapi_demo_simple/static/: index.html  webrtc_offer.js
