[project]
name = "webrtc-fastapi-demo"
authors = [
    { name = "Lucas Steinmann", email = "lucas@steinm.net" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi",
    "aiortc",
    "websockets"
]
version = "1.0"

[project.urls]
homepage = "https://github.com/Lucas-Steinmann/webrtc-fastapi-demo/"

